--- a/css/style.css
+++ b/css/style.css
@@ -1,98 +1,143 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 * {
   padding: 0;
   margin: 0;
   font-family: "poppins";
+  box-sizing: border-box;
 }
+
+body,
+html {
+  scroll-behavior: smooth;
+  scroll-padding: 100px;
+}
+
+.main-container {
+  width: 100%;
+  height: 100vh;
+  background-image: url(../img/pink.svg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+/* =================== NAVBAR STARTS HERE ================ */
+
 nav {
   display: flex;
-  padding: 20px 0px;
   align-items: center;
   justify-content: space-between;
   position: fixed;
   background: linear-gradient(180deg, #d9d9d954, #b0b0b02e, #cfcfcf57);
   width: 100%;
   z-index: 10;
+  padding: 15px 200px;
 }
+
 nav .logo {
   font-size: 28px;
   font-weight: 700;
-  margin-left: 200px;
 }
+
 nav .logo span {
   color: #e33071;
 }
-nav ul {
+
+nav .menu {
   display: flex;
+  gap: 30px;
 }
-nav ul li {
+
+nav .menu li {
   list-style: none;
-  margin: 0px 20px;
 }
-nav ul li a {
+
+nav .menu li a {
   text-decoration: none;
   font-weight: 500;
   color: #4f4f4f;
 }
-nav ul li a:hover {
+
+nav .menu li a:hover {
   color: #e33071;
   cursor: pointer;
 }
-nav .menu {
-  margin-right: 200px;
-}
-header {
+
+/* =================== NAVBAR ENDS HERE ================ */
+
+/* =================== HOME STARTS HERE ================ */
+
+.home-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
   text-align: center;
-  padding-top: 200px;
-  height: 90vh;
 }
-header img {
-  margin-bottom: 25px;
-}
-header p {
+
+.home-container p {
   font-size: 28px;
   color: #4b4b4b;
 }
-header h3 {
+
+.home-container h3 {
   font-size: 48px;
   color: #2e2e2e;
   font-weight: 500;
-  padding: 25px;
 }
-header span {
+
+.home-container span {
   font-size: 16px;
   color: #4b4b4b;
 }
-header .btns {
+
+.home-container .btns {
   display: flex;
-  margin: 50px auto;
-  justify-content: center;
+  gap: 15px;
+  margin-top: 5px;
 }
-header .btns .btn button {
-  padding: 15px 60px 15px 30px;
+
+.home-container .btns .lets-connect {
   border-radius: 50px;
   border: none;
   background: linear-gradient(90deg, #b43cd2, #df832e);
   color: #fff;
   font-size: 16px;
   font-weight: 500;
-}
-header .btns .btn img {
-  position: absolute;
-  margin-left: 144px;
-  margin-top: 16px;
-}
-#download_resume {
-  background: transparent;
-  border: 2px solid #4f4f4f;
-  color: #4b4b4b;
-  margin-left: 10px;
-}
-.circle {
-  position: absolute;
-  right: 0;
+  padding: 10px 30px;
+  cursor: pointer;
 }
 
-section {
-  height: 1000px;
+.home-container .btns .resume {
+  padding: 10px 30px;
+  font-weight: 500;
+  font-size: 16px;
+  border: none;
+  border-radius: 50px;
+  background: transparent;
+  color: #4b4b4b;
+  border: 2px solid #4f4f4f;
+  cursor: pointer;
+}
+
+.home-container .btns .lets-connect:hover {
+  background: blanchedalmond;
+  color: black;
+}
+
+.home-container .btns .resume:hover {
+  background: blanchedalmond;
+  color: black;
+  border: 2px solid #ffffff;
+}
+
+/* =================== HOME ENDS HERE ================ */
+
+.about-container {
+  width: 100%;
+  height: 100vh;
 }
