--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,58 @@ nav .menu li a:hover {
 
 /* =================== HOME ENDS HERE ================ */
 
+/* =================== ABOUT STARTS HERE ================ */
+
 .about-container {
   width: 100%;
   height: 100vh;
+  padding: 0 200px;
+  text-align: center;
+}
+
+.about-container h2 {
+  font-weight: 600;
+  font-size: 26px;
+  margin-bottom: 30px;
+}
+
+.about-main {
+  display: flex;
+  gap: 40px;
+  text-align: left;
+}
+
+.about-main img {
+  width: 1000px;
+  height: 400px;
+  object-fit: cover;
+  border-radius: 20px;
+}
+
+.about-main-section {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.edu-section h4,
+.skills-section h4 {
+  font-size: 15px;
+  font-weight: 600;
+  margin-bottom: 5px;
+}
+
+.skills-section ul {
+  display: flex;
+  gap: 10px;
+  list-style: none;
+}
+
+.skills-section ul li {
+  text-decoration: none;
+  border: 1px solid black;
+  border-radius: 6px;
+  padding: 3px 8px;
+  font-size: 12px;
 }
